--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # compiled output
 /dist
+/dist-build
 /node_modules
 /build
 
@@ -54,3 +55,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Railway
+.railway
