--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
-[providers]
-providers = ["nodejs@20"]
-
 [phases.setup]
 nixPkgs = ["nodejs_20", "npm-9_x"]
 
 [phases.install]
-cmd = "npm ci --production=false"
+cmd = "npm install"
 
 [phases.build]
 cmd = "npm run build"
