fix: remove duplicate build and seed scripts in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "build": "nest build",
+    "seed": "ts-node src/scripts/seed.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist-build/main",
