--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "school-payment-backend",
   "version": "1.0.0",
+    "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "description": "School Payment Management API",
   "author": "",
   "private": true,
