--- a/package.json
+++ b/package.json
@@ -2,50 +2,29 @@
   "name": "school-payment-backend",
   "version": "1.0.0",
   "description": "School Payment Management API",
-  "main": "dist/main.js",
+  "main": "src/main.ts",
   "engines": {
     "node": "20.x",
     "npm": "10.x"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "start:dev": "ts-node src/main.ts",
-    "start:prod": "node dist/main.js",
-    "prebuild": "rm -rf dist",
-    "postbuild": "ls -la dist/"
+    "start": "npx ts-node src/main.ts",
+    "start:dev": "npx ts-node src/main.ts",
+    "start:prod": "npx ts-node src/main.ts",
+    "build": "echo 'Skipping build - running TypeScript directly'"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/mongoose": "^10.0.0",
-    "@nestjs/jwt": "^10.0.0",
-    "@nestjs/passport": "^10.0.0",
-    "mongoose": "^7.0.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "jsonwebtoken": "^9.0.0",
-    "axios": "^1.4.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.3.1",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/passport-jwt": "^3.0.6",
+    "rxjs": "^7.8.1",
     "typescript": "^5.1.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@types/node": "^20.3.1"
   },
   "keywords": [
     "nestjs",
-    "mongodb",
-    "payment",
     "api"
   ],
   "license": "MIT"
