--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npx ts-node src/main.ts",
     "start:dev": "npx ts-node src/main.ts",
     "start:prod": "npx ts-node src/main.ts",
+    "dev": "ts-node-dev --respawn src/main.ts",
     "build": "echo 'Skipping build - running TypeScript directly'"
   },
   "dependencies": {
@@ -19,6 +20,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "express": "^4.18.0",
+    "@types/express": "^4.17.0",
     "typescript": "^5.1.3",
     "ts-node": "^10.9.1",
     "@types/node": "^20.3.1"
