--- a/package.json
+++ b/package.json
@@ -4,31 +4,19 @@
   "description": "School Payment Management API",
   "main": "src/main.ts",
   "engines": {
-    "node": "20.x",
-    "npm": "10.x"
+    "node": "20.x"
   },
   "scripts": {
-    "start": "npx ts-node src/main.ts",
-    "start:dev": "npx ts-node src/main.ts",
-    "start:prod": "npx ts-node src/main.ts",
     "dev": "ts-node-dev --respawn src/main.ts",
-    "build": "echo 'Skipping build - running TypeScript directly'"
+    "start": "npx ts-node src/main.ts",
+    "start:prod": "npx ts-node src/main.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/core": "^10.2.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "express": "^4.18.0",
-    "@types/express": "^4.17.0",
-    "typescript": "^5.1.3",
     "ts-node": "^10.9.1",
-    "@types/node": "^20.3.1"
-  },
-  "keywords": [
-    "nestjs",
-    "api"
-  ],
-  "license": "MIT"
+    "typescript": "^5.1.3",
+    "express": "^4.18.0",
+    "@types/express": "^4.17.0"
+  }
 }
