--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "start": "npx ts-node src/main.ts",
     "start:prod": "npx ts-node src/main.ts"
   },
-"dependencies": {
-  "@nestjs/core": "^10.2.4",
-  "@nestjs/mongoose": "^10.0.2",
-  "@nestjs/jwt": "^10.0.0",
-  "@nestjs/config": "^3.0.0",
-  "mongoose": "^7.6.0",
-  "bcryptjs": "^2.4.3",
-  "reflect-metadata": "^0.1.13",
-  "ts-node": "^10.9.1",
-  "typescript": "^5.1.3",
-  "express": "^4.18.0",
-  "@types/express": "^4.17.0"
-},
+  "dependencies": {
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.2.4",
+    "@nestjs/jwt": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
+    "@types/express": "^4.17.0",
+    "axios": "^1.12.2",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "express": "^4.18.0",
+    "mongoose": "^7.6.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6"
   }
