--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.2.4",
-    "@nestjs/jwt": "^10.0.0",
-    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@types/express": "^4.17.0",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
