--- a/package.json
+++ b/package.json
@@ -1,35 +1,32 @@
 {
   "name": "school-payment-backend",
   "version": "1.0.0",
-  "description": "School Payment Management API",
-  "main": "src/main.ts",
-  "engines": {
-    "node": "20.x"
-  },
+  "description": "",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/main.ts",
     "start": "npx ts-node src/main.ts",
-    "start:prod": "npx ts-node src/main.ts"
+    "build": "tsc",
+    "start:prod": "node dist/main.js"
   },
   "dependencies": {
-    "@nestjs/axios": "^4.0.1",
-    "@nestjs/config": "^4.0.2",
+    "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
-    "@nestjs/platform-express": "^11.1.6",
-    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
-    "@types/express": "^4.17.0",
-    "axios": "^1.12.2",
-    "bcryptjs": "^2.4.3",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/axios": "^11.0.0",
+    "mongoose": "^8.18.1",
+    "bcryptjs": "^3.0.2",
+    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "express": "^4.18.0",
-    "mongoose": "^7.6.0",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "rxjs": "^7.8.0",
+    "axios": "^1.7.6",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6"
+    "typescript": "^5.2.2",
+    "ts-node": "^10.9.1",
+    "@types/node": "^20.5.6"
   }
 }
