--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "school-payment-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/main.js",
+  "description": "School Payment Management API",
+  "main": "src/main.ts",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "npx ts-node src/main.ts",
-    "build": "tsc",
-    "start:prod": "node dist/main.js"
+    "start:dev": "npx ts-node src/main.ts", 
+    "start:prod": "npx ts-node src/main.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/core": "^11.1.6",
-    "@nestjs/mongoose": "^11.0.3",
-    "@nestjs/jwt": "^11.0.0",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/axios": "^3.1.0",
-    "mongoose": "^8.18.1",
-    "bcryptjs": "^3.0.2",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "rxjs": "^7.8.0",
-    "axios": "^1.7.6",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.4.5"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "typescript": "^5.1.3",
+    "ts-node": "^10.9.1",
+    "@types/node": "^20.3.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
