--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
   },
   "scripts": {
     "start": "npx ts-node src/main.ts",
-    "start:dev": "npx ts-node src/main.ts", 
+    "start:dev": "npx ts-node src/main.ts",
     "start:prod": "npx ts-node src/main.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/node": "^20.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typescript": "^5.1.3",
     "ts-node": "^10.9.1",
-    "@types/node": "^20.3.1"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/node": "^20.5.6",
     "ts-node": "^10.9.1",
-    "@types/node": "^20.5.6"
+    "typescript": "^5.2.2"
   }
 }
