--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.4.20",
+    "@nestjs/config": "^2.3.4",
     "@nestjs/core": "^10.4.20",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.1.0",
