--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.2",
     "ts-node": "^10.9.1",
