--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "engines": {
     "node": "20.x"
   },
-  "scripts": {
-    "start": "npx ts-node src/main.ts",
-    "start:dev": "npx ts-node src/main.ts",
-    "start:prod": "npx ts-node src/main.ts"
-  },
+"scripts": {
+  "start": "node dist/main.js",
+  "start:dev": "ts-node src/main.ts",
+  "start:prod": "node dist/main.js",
+  "build": "tsc"
+},
   "dependencies": {
     "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.4.20",
