--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "engines": {
     "node": "20.x"
   },
-"scripts": {
-  "start": "node dist/main.js",
-  "start:dev": "ts-node src/main.ts",
-  "start:prod": "node dist/main.js",
-  "build": "tsc"
-},
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "start:dev": "ts-node src/main.ts",
+    "start:prod": "node dist/main.js"
+  },
   "dependencies": {
     "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.4.20",
-    "@nestjs/config": "^2.3.4",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.20",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.1.0",
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.5.6",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
