--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
