--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.18.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -37,6 +38,7 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.6",
     "@types/node": "^20.5.6",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
